Ajustado nome do pacote principal

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@ignite-ui/eslint-config",
+  "name": "@aula-ignite-ui/eslint-config",
   "license": "MIT",
   "main": "index.js",
   "devDependencies": {
