--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@ignite-ui/ts-config",
+  "name": "@aula-ignite-ui/ts-config",
   "version": "1.0.0",
   "license": "MIT"
 }
