--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "@aula-ignite-ui/eslint-config",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "index.js",
   "devDependencies": {
